entities and repos